# normal-index-v1

./: .env.example  .gitignore  Cargo.toml  README.md  Taskfile.yaml  generate-bindings.sh  initialize.js  package-lock.json  package.json
.github/workflows/: rust.yml
bindings/adapter_registry/: README.md  package.json
bindings/adapter_registry/src/: index.ts
bindings/aquarius_adapter/: README.md  package.json
bindings/aquarius_adapter/src/: index.ts
bindings/index/: README.md  package.json
bindings/index/src/: index.ts
bindings/index_factory/: README.md  package.json
bindings/index_factory/src/: index.ts
bindings/index_fund/: README.md  package.json
bindings/index_fund/src/: index.ts
bindings/index_fund_factory/: README.md  package.json
bindings/index_fund_factory/src/: index.ts
bindings/index_token/: README.md  package.json
bindings/index_token/src/: index.ts
bindings/normal_adapter/: README.md  package.json
bindings/normal_adapter/src/: index.ts
bindings/soroban_token_contract/src/: index.ts
bindings/soroswap_adapter/: README.md  package.json
bindings/swap_utility/: README.md  package.json
bindings/swap_utility/src/: index.ts
contracts/adapter_registry/: Cargo.toml  Taskfile.yaml
contracts/adapter_registry/src/: contract.rs  errors.rs  interface.rs  lib.rs  storage.rs  test.rs  test_permissions.rs  testutils.rs
contracts/adapters/aquarius/: Cargo.toml  Taskfile.yaml
contracts/adapters/normal/: Cargo.toml  Taskfile.yaml
contracts/adapters/soroswap/: Cargo.toml  Taskfile.yaml
contracts/adapters/soroswap/src/: contract.rs  lib.rs  soroswap_router.rs  storage.rs
contracts/index/: Cargo.toml  Taskfile.yaml
contracts/index/src/: contract.rs  errors.rs  events.rs  fees.rs  index.rs  interface.rs  lib.rs  privacy.rs  rebalance.rs  stake.rs  storage.rs  test_fees.rs  test_rebalance.rs  test_refactor.rs  test_utils.rs  token.rs  volume.rs
contracts/index_factory/: Cargo.toml  Taskfile.yaml
contracts/index_factory/src/: contract.rs  events.rs  index_utils.rs  interface.rs  lib.rs  oracle.rs  storage.rs  tiers.rs
contracts/index_fund/: Cargo.toml  Taskfile.yaml
contracts/index_fund/src/: adapter.rs  contract.rs  errors.rs  events.rs  fee.rs  index.rs  interface.rs  lib.rs  oracle.rs  rebalance.rs  refactor.rs  shares.rs  storage.rs  test.rs  test_rebalance.rs  test_refactor.rs  test_utils.rs  token.rs  volume.rs
contracts/index_fund/src/test/: test_rebalance.rs  test_refactor.rs  test_utils.rs
contracts/index_fund_factory/: Cargo.toml  Taskfile.yaml
contracts/index_fund_factory/src/: contract.rs  (+10 more)
contracts/index_fund_fee_provider/: Cargo.toml  Taskfile.yaml
contracts/index_token/: Cargo.toml  Taskfile.yaml
contracts/index_token/src/: allowance.rs  balance.rs  contract.rs  lib.rs
contracts/mixer/: Cargo.toml
contracts/mixer/src/: batch.rs  contract.rs  errors.rs  events.rs  interface.rs  lib.rs  storage.rs  types.rs
contracts/normal_adapter/: Taskfile.yaml
contracts/swap_utility/: Cargo.toml  Taskfile.yaml
contracts/swap_utility/src/: contract.rs  errors.rs  events.rs  interface.rs  lib.rs  storage.rs
contracts/swap_utility/src/providers/: base.rs  mod.rs  normal.rs  soroswap.rs
contracts/token/: Taskfile.yaml
external_wasms/normal/: treasury.wasm
modules/adapter/: Cargo.toml
modules/index_access_control/: Cargo.toml
modules/privacy_manager/: Cargo.toml
modules/token_share/: Cargo.toml
modules/types/: Cargo.toml
modules/utils/: Cargo.toml
scripts/: deploy.sh  deploy_index.sh  generate-bindings.sh  setup.sh
(+73 files in other folders)
