[package]
name = "index_fund"
version.workspace = true
edition = "2021"
publish = false
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
paste = { workspace = true }
index_access_control = { workspace = true }
types = { workspace = true }
utils = { workspace = true }
upgrade = { workspace = true }
soroban-fixed-point-math = { workspace = true }
token_share = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
utils = { workspace = true, features = ["testutils"] }
