[package]
name = "mixer"
version.workspace = true
rust-version.workspace = true
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk.workspace = true
soroban-token-sdk.workspace = true
access_control.workspace = true
utils.workspace = true

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]