[package]
name = "swap-utility"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
utils = { path = "../../modules/utils" }
access_control = { path = "../../modules/access_control" }
normal-rust-types = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

[[bin]]
name = "swap-utility"
path = "src/bin/swap_utility.rs"